Moving kite based methods in kitereader module